syntax = "proto3";

option csharp_namespace = "Protos.Activities.AddPoint";

package addpoint;

import "google/type/datetime.proto";

message AddPointRequest {
  string ActivityId = 1;
  google.type.DateTime Time = 2;
  double Latitude = 3;
  double Longitude = 4;
  double Altitude = 5;
  double Accuracy = 6;
  double Course = 7;
  string Note = 8;
  repeated string PhotoUris = 9;
}
