syntax = "proto3";

option csharp_namespace = "Protos.Activities.CreateActivity";

package createactivity;

import "google/protobuf/timestamp.proto";

message CreateActivityRequest {
  string Id = 1;
  string ActionId = 2;
  string RaceId = 3;
  string CategoryId = 4;
  string Name = 5;
  string Description = 6;
  string Type = 7;
  google.protobuf.Timestamp Start = 8;
  google.protobuf.Timestamp End = 9;
  bool IsPublic = 10;
  repeated PositionDto Positions = 11;
  repeated PetDto Pets = 12;
}

message PositionDto {
  string Id = 1;
  google.protobuf.Timestamp Time = 2;
  double Latitude = 3;
  double Longitude = 4;
  double Altitude = 5;
  double Accuracy = 6;
  double Course = 7;
  string Note = 8;
  repeated string PhotoUris = 9;
}

message PetDto {
  string Id = 1;
  string Chip = 2;
  string Name = 3;
  string Breed = 4;
  string Color = 5;
  string Kennel = 6;
  google.protobuf.Timestamp BirthDate = 7;
}
