syntax = "proto3";

option csharp_namespace = "Protos.Activities.GetMyActivities";

package getmyactivities;

message GetMyActivitiesRequest {
}
